tests/trybuild/entities/unexpected_token.stderr
error: no rules expected the token `+`
 --> tests/trybuild/entities/unexpected_token.rs:8:46
  |
8 |     let entities = entities!((A, B), (A, B), + (A, B));
  |                                              ^ no rules expected this token in macro call
  |
note: while trying to match `(`
 --> src/entities/mod.rs
  |
  |     ($(($($components:expr),*)),+ $(,)?) => {
  |        ^
